dept.yaml
kind: Deployment
apiVersion: apps/v1
metadata:
  name: react-docker
spec:
  replicas: 1
  selector:
    matchLabels:
      app: react-docker
  template:
    metadata:
      labels:
        app: react-docker
    spec:
      containers:
        - name: react-docker
          image: test:frontend
          imagePullPolicy: Never
          ports:
            - containerPort: 5173
---
apiVersion: v1
kind: Service
metadata:
  name: frontend-srv
spec:
  selector:
    app: react-docker
  type: ClusterIP
  ports:
    - name: react-docker
      protocol: TCP
      port: 5173
      targetPort: 5173
